Change go-webserver api: jobs renamed to tasks. Generate swagger docs
