# go-webserver/docs/swagger.json
@@ -76,7 +76,7 @@
                 "summary": "Delete existing csv data"
             }
         },
-        "/jobs": {
+        "/tasks": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -85,9 +85,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "jobs"
+                    "tasks"
                 ],
-                "summary": "List existing jobs"
+                "summary": "List existing tasks"
             },
             "post": {
                 "consumes": [
@@ -97,12 +97,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "jobs"
+                    "tasks"
                 ],
-                "summary": "Upload csv data"
+                "summary": "Add new task"
             }
         },
-        "/jobs/{id}": {
+        "/tasks/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -111,9 +111,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "jobs"
+                    "tasks"
                 ],
-                "summary": "Show specific job"
+                "summary": "Show specific task"
             },
             "delete": {
                 "consumes": [
@@ -123,9 +123,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "jobs"
+                    "tasks"
                 ],
-                "summary": "Delete existing job"
+                "summary": "Delete existing task"
             }
         },
         "/workers": {
